# espidf-esp32-second-rc-car

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
main/: CMakeLists.txt  Kconfig.projbuild  espnow_receiver.c  espnow_receiver.h  input_lock.c  input_lock.h  joystick_mixer.c  joystick_mixer.h  joystick_packet.h  main.c  motor_control.c  motor_control.h  secrets.h.example  udp_receiver.c  udp_receiver.h  wifi_init.c  wifi_init.h
