idf_component_register(SRCS
                    "main.c"
                    "wifi_init.c"
                    "input_lock.c"
                    "espnow_receiver.c"
                    "udp_receiver.c"
                    "joystick_mixer.c"
                    "motor_control.c"
                    INCLUDE_DIRS ".")
